<resources>
    <string name="app_name">BantuKuy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more"><u>selengkapnya</u></string>
    <string name="title_bantu_cari">Temukan Panti</string>
    <string name="orphanage">Panti Asuhan</string>
    <string name="near">Panti Terdekat</string>

    <string name="nursing">Panti Jompo</string>
    <string name="donor_greetings">Mau bantu panti mana hari ini?</string>
    <string name="donor_user_greetings">Hai, %s</string>
    <string name="title_bantu_donasi">Barang Sumbanganku</string>
    <string name="title_donation_box">Kotak Sumbanganku</string>
    <string name="target">Tujuan : </string>
    <string name="house_target">%s</string>
    <string name="donation_detail">Bantuan : </string>
    <string name="cash_placeholder">Uang</string>
    <string name="goods_placeholder">Barang</string>
    <string name="total">Total : </string>
    <string name="total_cash">Pembayaran</string>
    <string name="expedition_placeholder">Jasa Pengiriman</string>
    <string name="search_image">Search Image</string>
    <string name="detail_image">Detail Image</string>
    <string name="back">Back</string>
    <string name="location">Location</string>
    <string name="opening_hours">Opening hours</string>
    <string name="image_item">Image Item</string>
    <string name="contact_home">Contact Home</string>
    <string name="visit_site">Visit site</string>
    <string name="see_at_maps">See at Maps</string>
    <string name="donate_here">Donate here</string>
    <string name="pilih">Pilih</string>
    <string name="bantudonasi">BantuDonasi</string>
    <string name="tujuan">Tujuan</string>
    <string name="panti_tujuan">Panti Tujuan</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="kotak_sumbanganku">Kotak Sumbanganku</string>
    <string name="uang">Uang</string>
    <string name="cash">Tunai</string>
    <string name="ubah">Ubah</string>
    <string name="barang">Barang</string>
    <string name="weight">Bobot (kg) :</string>
    <string name="expedition">Jasa Pengiriman</string>
    <string name="penyedia_layanan_pengiriman">Penyedia Layanan Pengiriman</string>
    <string name="donor_overview">Ringkasan Donasi</string>
    <string name="rupiah">Rp</string>
    <string name="kilogram">kg</string>
    <string name="select_payment">Pilih Pembayaran</string>
    <string name="home_not_selected">Kamu belum memilih panti</string>
    <string name="home_not_selected_reload">Kamu belum memilih panti\nTekan untuk memuat ulang</string>
    <string name="home_name">Nama Panti Asuhan</string>
    <string name="home_address">Alamat Panti Asuhan</string>
    <string name="format_money">Rp %s</string>
    <string name="money_not_enough">Jumlah minimum donasi belum tercapai \n(Rp 10.000)</string>
    <string name="expedition_service">Layanan yang digunakan</string>
    <string name="goods_cat">Nama kategori barang</string>
    <string name="format_weight">Jumlah: %s kg</string>
    <string name="hapus">Hapus</string>
    <string name="pilih_panti">Pilih Panti</string>
    <string name="cari">Cari</string>
    <string name="add">Tambah</string>
    <string name="edit">Ubah</string>
    <string name="saat_ini_ada">Saat ini ada</string>
    <string name="format_kilogram">%s kg</string>
    <string name="barang_di_kotak">kg barang di kotak</string>
    <string name="donate_now">DONASI SEKARANG</string>
    <string name="placeholder_money">placeholder_money</string>
    <string name="placeholder_kilogram">placeholder_kilogram</string>
    <string name="format_rupiah">Rp %s</string>
    <string name="add_cash">Tambah Nominal</string>
    <string name="edit_cash">Ganti Nominal</string>
    <string name="add_goods">Tambah Bobot Barang</string>
    <string name="edit_goods">Ganti Bobot Barang</string>
    <string name="cash_hint">Nominal</string>
    <string name="delete_confirmation">Yakin hapus?</string>
    <string name="popup_del_goods_placeholder">%s\n(%d kg)</string>
    <string name="refresh">Muat ulang</string>
    <string name="popup_del_cash_placeholder">%s\n(Rp %s)</string>
    <string name="status_pay">Status</string>
    <string name="confirm_pay">Konfirmasi Pembayaran</string>

    <string-array name="spinner_cash_categories">
        <item>Tunai</item>
        <item>Cek</item>
    </string-array>

    <string-array name="spinner_goods_categories">
        <item>Bahan Makanan</item>
        <item>Pakaian</item>
        <item>Alat Tulis Kantor</item>
    </string-array>
</resources>