<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dbox_goods_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="2dp"
    android:background="@color/white"
    tools:context=".donor.ui.fragments.box.item.DonationBoxItemGoods">

    <ImageView
        android:id="@+id/dbox_goods_img"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@drawable/rounded_background_white_border"
        android:src="@drawable/ic_box_open"
        android:contentDescription="@string/uang"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/dbox_goods_name"
        style="@style/Oxygen_Bold_Black_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/goods_cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dbox_goods_img"
        app:layout_constraintStart_toEndOf="@id/dbox_goods_img" />

    <TextView
        android:id="@+id/dbox_goods_detail"
        style="@style/Oxygen_Bold_Black_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/format_weight"
        android:maxLines="1"
        android:maxLength="20"
        app:layout_constraintStart_toEndOf="@id/dbox_goods_img"
        app:layout_constraintTop_toBottomOf="@id/dbox_goods_name"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dbox_goods_btn_edit"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/ubah"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_black_family"
        android:background="@drawable/rounded_background_primary_border"
        app:layout_constraintTop_toBottomOf="@id/dbox_goods_detail"
        app:layout_constraintStart_toEndOf="@id/dbox_goods_img"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dbox_goods_btn_del"
        android:layout_width="66dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:text="@string/hapus"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_black_family"
        android:background="@drawable/rounded_background_red_border"
        app:layout_constraintTop_toTopOf="@id/dbox_goods_btn_edit"
        app:layout_constraintStart_toEndOf="@id/dbox_goods_btn_edit"/>

</androidx.constraintlayout.widget.ConstraintLayout>