<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coontainer_overview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background_white_border"
    android:layout_marginTop="16dp"
    tools:context=".donor.ui.fragments.box.item.DonationBoxOverview">

    <TextView
        android:id="@+id/dbox_overview_title"
        style="@style/Oxygen_Bold_Black_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_overview"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dbox_overview_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/dbox_overview_title"
        app:layout_constraintStart_toStartOf="@id/dbox_overview_title"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/dbox_overview_cash_title"
            style="@style/Oxygen_Bold_Black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/uang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/dbox_overview_cash_value"
            style="@style/Oxygen_Bold_Black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/rupiah"
            app:layout_constraintTop_toTopOf="@id/dbox_overview_cash_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/dbox_overview_goods_title"
            style="@style/Oxygen_Bold_Black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/barang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dbox_overview_cash_title"/>

        <TextView
            android:id="@+id/dbox_overview_goods_value"
            style="@style/Oxygen_Bold_Black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilogram"
            app:layout_constraintTop_toTopOf="@id/dbox_overview_goods_title"
            app:layout_constraintEnd_toEndOf="@id/dbox_overview_cash_value"/>

        <TextView
            android:id="@+id/dbox_overview_expedition_title"
            style="@style/Oxygen_Bold_Black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/expedition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dbox_overview_goods_title"/>

        <TextView
            android:id="@+id/dbox_overview_expedition_value"
            style="@style/Oxygen_Bold_Black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupiah"
            app:layout_constraintTop_toTopOf="@id/dbox_overview_expedition_title"
            app:layout_constraintEnd_toEndOf="@id/dbox_overview_cash_value"/>

        <TextView
            android:id="@+id/dbox_overview_total_title"
            style="@style/Oxygen_Bold_Black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dbox_overview_expedition_title"/>

        <TextView
            android:id="@+id/dbox_overview_total_value"
            style="@style/Oxygen_Bold_Black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupiah"
            app:layout_constraintTop_toTopOf="@id/dbox_overview_total_title"
            app:layout_constraintEnd_toEndOf="@id/dbox_overview_cash_value"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/donation_box_btn_donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/rounded_background_secondary_3"
            android:text="@string/select_payment"
            android:fontFamily="@font/inter_black_family"
            app:layout_constraintTop_toBottomOf="@id/dbox_overview_total_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/dbox_overview_placeholder"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/dbox_overview_contents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>