<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dbox_home_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginTop="8dp"
    tools:context=".donor.ui.fragments.box.item.home.DonationBoxItemHome">

    <TextView
        android:id="@+id/dbox_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Oxygen_Bold_Black_18"
        android:text="@string/tujuan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/btn_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_refresh_black"
        app:layout_constraintTop_toTopOf="@id/dbox_home_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dbox_home_contents"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dbox_home_title">

        <ImageView
            android:id="@+id/dbox_home_img"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:padding="4dp"
            android:background="@drawable/rounded_background_white_border"
            android:src="@drawable/ic_baseline_location_on_24_primary"
            android:contentDescription="@string/panti_tujuan"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/dbox_home_name"
            style="@style/Oxygen_Bold_Black_14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/home_name"
            android:maxLines="3"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/dbox_home_img"
            app:layout_constraintStart_toEndOf="@id/dbox_home_img" />

        <TextView
            android:id="@+id/dbox_home_address"
            style="@style/Oxygen_Bold_Black_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/home_address"
            android:maxLines="3"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/dbox_home_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dbox_home_name"
            app:layout_constraintBottom_toBottomOf="@id/dbox_home_img"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/dbox_home_warning"
        style="@style/Oxygen_Bold_Black_12"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/home_not_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dbox_home_title"/>


</androidx.constraintlayout.widget.ConstraintLayout>