<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dbox_box_money_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".donor.ui.fragments.box.item.DonationBoxItemMoney">

        <!--Warning-->
        <TextView
            android:id="@+id/dbox_box_money_warning"
            style="@style/Oxygen_Bold_Black_12"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/money_not_enough"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--Content-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:layout_constraintTop_toBottomOf="@id/dbox_box_money_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/dbox_box_money_img"
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:background="@drawable/rounded_background_white_border"
                    android:src="@drawable/ic_baseline_attach_money_80"
                    android:contentDescription="@string/uang"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/dbox_box_money_name"
                    style="@style/Oxygen_Bold_Black_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/cash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/dbox_box_money_img"
                    app:layout_constraintStart_toEndOf="@id/dbox_box_money_img" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/dbox_box_money_btn_edit"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/ubah"
                    android:textAllCaps="false"
                    android:fontFamily="@font/inter_black_family"
                    android:background="@drawable/rounded_background_primary_border"
                    app:layout_constraintBottom_toTopOf="@id/dbox_box_money_value"
                    app:layout_constraintStart_toEndOf="@id/dbox_box_money_img"/>

                <TextView
                    android:id="@+id/dbox_box_money_value"
                    style="@style/Oxygen_Bold_Black_12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/format_money"
                    tools:text="Rp 19.000.000"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:layout_constraintStart_toEndOf="@id/dbox_box_money_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/dbox_box_money_img"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>