<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".donor.ui.fragments.DonorDonationBoxFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/donor_box_tv_greetings_title"
            style="@style/Oxygen_Bold_Black_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bantudonasi"
            tools:text="BantuDonasi"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/donor_box_container_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/donor_box_home_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Oxygen_Bold_Black_18"
                android:text="@string/tujuan"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/donor_box_home_img"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                tools:src="@drawable/rounded_background_secondary_3"
                android:contentDescription="@string/panti_tujuan"
                app:layout_constraintTop_toBottomOf="@id/donor_box_home_tv_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/donor_box_home_tv_content_title"
                style="@style/Oxygen_Bold_Black_14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="@string/lorem"
                android:maxLines="3"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/donor_box_home_img"
                app:layout_constraintStart_toEndOf="@id/donor_box_home_img" />

            <TextView
                android:id="@+id/donor_box_home_tv_content_address"
                style="@style/Oxygen_Bold_Black_12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                tools:text="@string/lorem"
                android:maxLines="3"
                android:ellipsize="end"
                app:layout_constraintStart_toEndOf="@id/donor_box_home_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donor_box_home_tv_content_title"
                app:layout_constraintBottom_toBottomOf="@id/donor_box_home_img"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/donor_box_container_donations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/donor_box_donations_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Oxygen_Bold_Black_18"
                android:text="@string/kotak_sumbanganku"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/donor_box_donations_tv_title_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Oxygen_Bold_Black_18"
                    android:text="@string/uang"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:id="@+id/donor_box_donations_img_cash"
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="8dp"
                    tools:src="@drawable/rounded_background_secondary_3"
                    android:contentDescription="@string/uang"
                    app:layout_constraintTop_toBottomOf="@id/donor_box_donations_tv_title_cash"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/donor_box_home_tv_content_title_cash"
                    style="@style/Oxygen_Bold_Black_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="@string/lorem"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/cash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/donor_box_donations_img_cash"
                    app:layout_constraintStart_toEndOf="@id/donor_box_donations_img_cash" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/ubah"
                    android:textAllCaps="false"
                    android:fontFamily="@font/inter_black_family"
                    android:background="@drawable/rounded_background_primary_border"
                    app:layout_constraintBottom_toTopOf="@id/donor_box_donations_tv_content_cash_value"
                    app:layout_constraintStart_toEndOf="@id/donor_box_donations_img_cash"/>

                <TextView
                    android:id="@+id/donor_box_donations_tv_content_cash_value"
                    style="@style/Oxygen_Bold_Black_12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    tools:text="@string/lorem"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:layout_constraintStart_toEndOf="@id/donor_box_donations_img_cash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/donor_box_donations_img_cash"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>




    </LinearLayout>


</ScrollView>